Don't background pause suspend until we have future data.

Otherwise the pause state is not reliable and we may incorrectly
prevent background playback attempts.

We can't always force background pause suspend since background
playback may trigger a play() but we don't know the correct paused
state yet.

BUG=658680
TEST=new test.

Review-Url: https://codereview.chromium.org/2449873006
Cr-Commit-Position: refs/heads/master@{#427910}

Former-commit-id: cc8baf72a3cfc63b1bd39710b8999b04508e43c8